@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace odel {
      interface model.Model {
          {abstract} + getCurrentWeek()
          {abstract} + getCurrentWeekIndex()
          {abstract} + getCurrentYear()
          {abstract} + getNumberOfWeeksBetween()
          {abstract} + getWeekList()
          {abstract} + goNextWeek()
          {abstract} + goPreviousWeek()
          {abstract} + hasNextWeek()
          {abstract} + hasPreviousWeek()
          {abstract} + initializeAllWeeks()
          {abstract} + initializeCurrentWeekIndex()
          {abstract} + readSemesterData()
          {abstract} + readStudentFromTXTFile()
          {abstract} + saveSemesterData()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.ModelManager {
          + ModelManager()
          + getCurrentWeek()
          + getCurrentWeekIndex()
          + getCurrentYear()
          + getNumberOfWeeksBetween()
          + getWeekList()
          + goNextWeek()
          + goPreviousWeek()
          + hasNextWeek()
          + hasPreviousWeek()
          + initializeAllWeeks()
          + initializeCurrentWeekIndex()
          + readSemesterData()
          + readStudentFromTXTFile()
          + saveSemesterData()
          + setSemester()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Test {
          {static} + main()
      }
    }
  }
  

  model.ModelManager .up.|> model.Model
  model.ModelManager o-- model.courses.ClassList : classList
  model.ModelManager o-- model.courses.CourseList : courseList
  model.ModelManager o-- model.rooms.RoomList : roomList
  model.ModelManager o-- model.calendar.Semester : semester
  model.ModelManager o-- model.students.StudentList : studentList


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
